--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=./out/index.html">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AHabib - Senior Unreal Engine Developer</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: #121212;
+      color: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+    }
+    .container {
+      max-width: 600px;
+      padding: 2rem;
+    }
+    h1 {
+      color: #38b2ac;
+    }
+    p {
+      margin-bottom: 2rem;
+    }
+    .button {
+      background-color: #38b2ac;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      border-radius: 0.25rem;
+      text-decoration: none;
+      font-weight: bold;
+      display: inline-block;
+    }
+  </style>
 </head>
 <body>
-  Redirecting...
+  <div class="container">
+    <h1>AHabib</h1>
+    <h2>Senior Technical Lead and Unreal Engine Developer</h2>
+    <p>Welcome to my portfolio. The site is currently being built. Please check back soon!</p>
+    <a href="https://www.youtube.com/@AHabib1080" class="button">Visit My YouTube Channel</a>
+  </div>
 </body>
 </html>
 
